# Klawiatura

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .editorconfig  .gitignore  .prettierrc  CMakeLists.txt  LICENSE  README.md  local_1p.bat  local_2p.bat  local_3p.bat  local_4p.bat  test_1p.bat  test_2p.bat  test_3p.bat  test_4p.bat
.github/: dependabot.yml
.github/workflows/: build.yml  formatting.yml  html5.yml  lint.yml  release.yml
KlaEditor/: KlaEditor.yyp
KlaEditor/fonts/fntMain/: fntMain.old.yy  fntMain.yy
KlaEditor/fonts/fntStatus/: fntStatus.yy
KlaEditor/objects/objControl/: Create_0.gml  Draw_0.gml  Draw_64.gml  Draw_72.gml  Draw_73.gml  Step_0.gml  Step_1.gml  Step_2.gml  objControl.yy
KlaEditor/objects/objMarker/: CleanUp_0.gml  Create_0.gml  Draw_0.gml  objMarker.yy
KlaEditor/options/android/: options_android.yy
KlaEditor/options/html5/: options_html5.yy
KlaEditor/options/ios/: options_ios.yy
KlaEditor/options/linux/: options_linux.yy
KlaEditor/options/mac/: options_mac.yy
KlaEditor/options/main/: options_main.yy
KlaEditor/options/tvos/: options_tvos.yy
KlaEditor/options/windows/: options_windows.yy
KlaEditor/rooms/rmMain/: rmMain.yy
KlaEditor/scripts/BackdropDef/: BackdropDef.gml  BackdropDef.yy
KlaEditor/scripts/ButtonElement/: ButtonElement.gml  ButtonElement.yy
KlaEditor/scripts/ConfirmNewWidget/: ConfirmNewWidget.gml  ConfirmNewWidget.yy
KlaEditor/scripts/Def/: Def.gml  Def.yy
KlaEditor/scripts/Element/: Element.gml  Element.yy
KlaEditor/scripts/Folder/: Folder.gml  Folder.yy
KlaEditor/scripts/FolderWidget/: FolderWidget.gml  FolderWidget.yy
KlaEditor/scripts/GradientDef/: GradientDef.gml  GradientDef.yy
KlaEditor/scripts/InputElement/: InputElement.gml  InputElement.yy
KlaEditor/scripts/LevelWidget/: LevelWidget.gml  LevelWidget.yy  PropertiesWidget.gml
KlaEditor/scripts/ObjectDef/: ObjectDef.gml  ObjectDef.yy
KlaEditor/scripts/PropertiesWidget/: PropertiesWidget.gml  PropertiesWidget.yy
KlaEditor/scripts/SpriteElement/: SpriteElement.gml  SpriteElement.yy
KlaEditor/scripts/TextElement/: TextElement.gml  TextElement.yy
KlaEditor/scripts/Widget/: Widget.gml  Widget.yy
KlaEditor/scripts/buffer_read_char/: buffer_read_char.gml  buffer_read_char.yy
KlaEditor/scripts/buffer_write_char/: buffer_write_char.gml  buffer_write_char.yy
KlaEditor/scripts/clear_level/: clear_level.gml  clear_level.yy
include/: K_assets.h  K_audio.h  K_chat.h  K_cmake.h.in  K_cmd.h  K_config.h  K_discord.h  K_editor.h  K_file.h  K_game.h  K_input.h  K_interface.h  K_levels.h  K_locale.h  K_log.h  K_math.h  K_memory.h  K_menu.h  K_misc.h  K_net.h  K_os.h  K_replay.h  K_secrets.h  K_state.h  K_string.h  K_tick.h  K_video.h  K_vmath.h  K_worlds.h
include/GekkoNet/: CMakeLists.txt
include/GekkoNet/windows/lib/Release/: GekkoNet.exp  GekkoNet.lib  GekkoNet_NO_ASIO.exp  GekkoNet_NO_ASIO.lib  GekkoNet_STATIC.lib  GekkoNet_STATIC_NO_ASIO.lib
include/actors/: K_artillery.h  K_autoscroll.h  K_bill.h  K_block.h  K_bowser.h  K_checkpoint.h  K_coin.h  K_enemies.h  K_koopa.h  K_lakitu.h  K_missiles.h  K_platform.h  K_player.h  K_points.h  K_powerups.h  K_rotodisc.h  K_spiny.h  K_warp.h
include/fmod/: CMakeLists.txt
include/uis/: K_message.h
modsrc/: editor.json
modsrc/fonts/: hud.json  main.json
modsrc/levels/: 1_1.kla  1_2.kla  1_3.kla  1_4.kla  AIRSHIP.kla  FUNTANKS.kla  HAMMER.kla  HARD11.kla  HARD12.kla  HARD13.kla  HARD14.kla  TEST.kla  benchmark.kla  fastrun.kla  forest_1.kla  funny_tanks.kla  goomba_party.kla  hammer_bros.kla  hardcore_1_1.kla  hardcore_1_2.kla  hardcore_1_3.kla  hardcore_1_4.kla  jitterer.kla  pipes.kla  test.kla  troll.kla  wave.kla
modsrc/music/: ALIVE9.mod  APOPLEXY.mod  BLASTAR.mod  DARKHALF.mod  DREAMOFF.mod  DYNAK.mod  FARTS.it  GNON.mod  HISCORE.xm  HOLIDAY.it  INSTINCT.mod  KAUPUNKI.mod  MIRACLE.s3m  ONEFINE.xm  PSWITCH.json  RBOWSER.json  RIOT11.mod  SYNDROME.mod  THEGLORY.mod  TRANCOI.xm  WATHLET.json  WATHLET2.json  WCASTLE.json  YATHLET.json  YBIGBOSS.json  YKYROCOC.mod  YSCORE.json  airship.xm  athletic7.mod  bassbin_bangin.mod  bowser1.json  castle.json  cave3.mid  clear.json  eat_bananas.mod  federation.mod  game_over.json  gnon.mod  human_like_predator.xm  interference_ending.mod  (+25 more)
modsrc/shaders/: main.fsh  main.vsh  wave.fsh
modsrc/textures/: E_BOMZH.json  E_BOWSRA.json  E_BROC.json  E_BROF.json  E_GOOMBC.json  E_KOOPAD.json  E_KOOPRB.json  E_PIRANA.json  E_PKOOPB.json  E_SPINGA.json  E_THWMPB.json  E_THWMPH.json  H_100.json  H_10000.json  H_1UP.json  H_2000.json  H_HARD11.json  I_BEETA.json  I_BEETC.json  I_COINC.json  I_CPOPC.json  I_CPOPD.json  I_CPOPE.json  I_CPOPF.json  I_LUIE.json  I_LUIF.json  I_LUIH.json  M_CHECKA.json  M_GOALBB.json  M_WARP.json  P_B_JUMP.json  P_F_DUCK.json  P_GROWA.json  P_GROWB.json  P_H_DUCK.json  P_H_IDLE.json  P_H_SWMB.json  P_H_SWMD.json  P_L_SWMA.json  P_L_SWMC.json  (+8 more)
res/: console.bat
shaders/: fragment.glsl
src/: K_actors.c  K_assets.c  K_audio.c  K_audio.h  K_chat.c  K_cmd.c  K_cmd.h  K_config.c  K_discord.c  K_editor.c  K_file.c  K_file.h  K_game.c  K_game.h  K_input.c  K_input.h  K_interface.c  K_levels.c  K_locale.c  K_log.c  K_log.h  K_main.c  K_math.c  K_math.h  K_memory.c  K_memory.h  K_menu.c  K_net.c  K_net.h  K_os.c  K_replay.c  K_screens.c  K_secrets.c  K_state.c  K_string.c  K_tick.c  K_uis.c  K_video.c  K_video.h  K_worlds.c  (+2 more)
src/actors/: K_artillery.c  K_autoscroll.c  K_autoscroll.h  K_benchmark.c  K_bill.c  K_block.c  K_block.h  K_bounds.c  K_bowser.c  K_bro.c  K_checkpoint.c  K_checkpoint.h  K_cheep.c  K_coin.c  K_dummy.c  K_effects.c  K_enemies.c  K_goal.c  K_goomba.c  K_hazards.c  K_koopa.c  K_lakitu.c  K_lava.c  K_missiles.c  K_piranha.c  K_platform.c  K_player.c  K_player.h  K_points.c  K_points.h  K_powerup.c  K_powerups.c  K_powerups.h  K_props.c  K_pswitch.c  K_rotodisc.c  K_scenery.c  K_solid.c  K_spiny.c  K_spring.c  (+3 more)
src/screens/: K_game.c  K_logo.c  K_map.c  K_menu.c
src/uis/: K_kick.c  K_message.c  K_options.c  K_pause.c
www/: index.html.j2
www/assets/: style.scss
(+344 files in other folders)
