project(GekkoNet)
add_library(GekkoNet SHARED IMPORTED GLOBAL)

if (WIN32)
    set_property(TARGET GekkoNet PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/windows/lib/Release/GekkoNet_NO_ASIO.dll")
    set_property(TARGET GekkoNet PROPERTY IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/windows/lib/Release/GekkoNet_NO_ASIO.lib")
    set_property(TARGET GekkoNet PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/windows/include")
elseif (LINUX)
    set_property(TARGET GekkoNet PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/linux/lib/libGekkoNet_NO_ASIO.so")
    set_property(TARGET GekkoNet PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/linux/include")
endif()
