project(fmod)
add_library(fmod SHARED IMPORTED GLOBAL)

if (WIN32)
    if(${CMAKE_SIZEOF_VOID_P} STREQUAL 4)
        set_property(TARGET fmod PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/windows/core/lib/x86/fmodL.dll")
        set_property(TARGET fmod PROPERTY IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/windows/core/lib/x86/fmodL_vc.lib")
    else()
        set_property(TARGET fmod PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/windows/core/lib/x64/fmodL.dll")
        set_property(TARGET fmod PROPERTY IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/windows/core/lib/x64/fmodL_vc.lib")
    endif()
    set_property(TARGET fmod PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/windows/core/inc")
elseif (LINUX)
    if(${CMAKE_SIZEOF_VOID_P} STREQUAL 4)
        set_property(TARGET fmod PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/linux/core/lib/x86/libfmodL.so.14.8")
    else()
        set_property(TARGET fmod PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/linux/core/lib/x86_64/libfmodL.so.14.8")
    endif()
    set_property(TARGET fmod PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/linux/core/inc")
endif()
